gcc/testsuite/gdc.test/compilable/gdc204.d
// PERMUTE_ARGS:

interface I204
{
      void f();
}

class C204 : I204
{
      void f();
}
