gcc/testsuite/gdc.test/fail_compilation/fail8168.d
void main() {
    version(GNU) asm {
        "unknown;" : : : ; // wrong opcode
    }
    else asm {
        unknown; // wrong opcode
    }
}

